[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cmdbsyncer"
version = "0.1.0"
description = "CMDB Syncer Application"

[tool.setuptools.packages.find]
where = ["."]
include = ["application*"]

[tool.pylint.main]
init-hook = 'import sys; sys.path.append("./application")'

[tool.pylint.typecheck]
# mongoengine's Document.objects is a QuerySetManager descriptor that pylint
# cannot resolve statically. Tell pylint to trust the attribute.
generated-members = ["objects"]

[tool.pyright]
include = ["application"]
extraPaths = ["./application"]
pythonVersion = "3.14"
