[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cmdbsyncer"
version = "3.12.11"
description = "Rule-based modular synchronizer for Checkmk, Netbox, Ansible, I-DOIT, Jira CMDB and 15+ other CMDB/monitoring systems"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Kuhn & Ruess GmbH", email = "info@kuhn-ruess.de" }]
maintainers = [{ name = "Bastian Kuhn", email = "mail@bastian-kuhn.de" }]
requires-python = ">=3.10"
keywords = [
    "cmdb",
    "checkmk",
    "netbox",
    "ansible",
    "i-doit",
    "jira",
    "infrastructure",
    "automation",
    "synchronization",
    "monitoring",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
    "Topic :: System :: Monitoring",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

# Managed by `make sync-deps` from requirements.txt — edit the requirements
# file, not this block. Manual edits here will be overwritten on next sync.
dependencies = [
    "Flask==3.1.3",
    "joserfc==1.6.4",
    "email_validator==2.2.0",
    "Flask-Bootstrap4==4.0.2",
    "Flask-Login==0.6.3",
    "Flask-Mail==0.10.0",
    "flask-mongoengine-3==1.1.0",
    "flask-restx==1.3.0",
    "Flask-WTF==1.2.2",
    "pyotp==2.9.0",
    "requests==2.33.1",
    "rich==14.0.0",
    "pynetbox==7.4.1",
    "python-slugify==8.0.4",
    "tablib==3.8.0",
    "sortedcontainers==2.4.0",
    "pyyml==0.0.2",
    "Flask-Admin==2.0.2",
    "pylint==4.0.5",
    "Flask-Limiter==4.1.1",
]

[project.scripts]
cmdbsyncer = "application.cli:main"
cmdbsyncer-plugin = "application.plugins_cli:main"

[project.urls]
Homepage = "https://cmdbsyncer.de"
Documentation = "https://docs.cmdbsyncer.de"
Repository = "https://github.com/kuhn-ruess/cmdbsyncer"
Issues = "https://github.com/kuhn-ruess/cmdbsyncer/issues"
Changelog = "https://github.com/kuhn-ruess/cmdbsyncer/tree/main/changelog"

[tool.setuptools.packages.find]
where = ["."]
include = ["application*", "syncerapi*"]

[tool.setuptools.package-data]
application = [
    "buildinfo.txt",
    "changelog.md",
    "templates/**/*",
    "static/**/*",
]

[tool.pylint.main]
init-hook = 'import sys; sys.path.extend([".", "./application"])'

[tool.pylint.typecheck]
# mongoengine's Document.objects is a QuerySetManager descriptor that pylint
# cannot resolve statically. Tell pylint to trust the attribute.
generated-members = ["objects"]

[tool.pyright]
include = ["application"]
extraPaths = ["./application"]
pythonVersion = "3.14"
