[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cmdbsyncer"
version = "4.0.0"
description = "Rule-based modular synchronizer for Checkmk, Netbox, Ansible, I-DOIT, Jira CMDB and 15+ other CMDB/monitoring systems"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Kuhn & Ruess GmbH", email = "info@kuhn-ruess.de" }]
maintainers = [{ name = "Bastian Kuhn", email = "mail@bastian-kuhn.de" }]
requires-python = ">=3.10"
keywords = [
    "cmdb",
    "checkmk",
    "netbox",
    "ansible",
    "i-doit",
    "jira",
    "infrastructure",
    "automation",
    "synchronization",
    "monitoring",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
    "Topic :: System :: Monitoring",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

# Resolved at build time from requirements.txt via [tool.setuptools.dynamic]
# below. Edit the requirements file, not this block.
dynamic = ["dependencies"]

[project.scripts]
cmdbsyncer = "application.cli:main"
cmdbsyncer-plugin = "application.plugins_cli:main"

[project.urls]
Homepage = "https://cmdbsyncer.de"
Documentation = "https://docs.cmdbsyncer.de"
Repository = "https://github.com/kuhn-ruess/cmdbsyncer"
Issues = "https://github.com/kuhn-ruess/cmdbsyncer/issues"
Changelog = "https://github.com/kuhn-ruess/cmdbsyncer/tree/main/changelog"

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}

[tool.setuptools.packages.find]
where = ["."]
include = ["application*", "syncerapi*"]

[tool.setuptools.package-data]
application = [
    "buildinfo.txt",
    "changelog/*.md",
    "changelog/.pages",
    "notices/*.txt",
    "templates/**/*",
    "static/**/*",
]

[tool.pylint.main]
init-hook = 'import sys; sys.path.extend([".", "./application"])'

[tool.pylint.typecheck]
# mongoengine's Document.objects is a QuerySetManager descriptor that pylint
# cannot resolve statically. Tell pylint to trust the attribute.
generated-members = ["objects"]

[tool.pyright]
include = ["application"]
extraPaths = ["./application"]
pythonVersion = "3.14"
